--- a/interface/package.json
+++ b/interface/package.json
@@ -6,6 +6,7 @@
     "gradient-string": "^3.0.0",
     "inquirer": "^12.5.0",
     "nanospinner": "^1.2.2",
+    "ora": "^8.2.0",
     "terminal-kit": "^3.1.2"
   },
   "name": "test",
